[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-webapi"
version = "1.0.0"
description = "Async Python wrapper for the Claude.ai web app"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["claude", "anthropic", "ai", "wrapper", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9",
    "browser-cookie3>=0.19; extra == 'browser'",
]

[project.optional-dependencies]
browser = ["browser-cookie3>=0.19"]
dev     = ["pytest>=7", "pytest-asyncio>=0.23", "black", "ruff"]

[project.urls]
Homepage   = "https://github.com/yourusername/claude_webapi"
Issues     = "https://github.com/yourusername/claude_webapi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_webapi*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

